k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: utm-archive
  labels:
    app.kubernetes.io/name: utm-archive
