k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archive-ingress
  namespace: utm-archive
  labels:
    app.kubernetes.io/part-of: utm-archive
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: archive-api
                port:
                  number: 80
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: archive-api
                port:
                  number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: archive-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: archive-client
                port:
                  number: 80
